# network-rag-system

./: .gitignore  CHANGELOG.md  LICENSE  README.md  auto_kb_updater.py  knowledge_updater.py  network-rag-system-integration-example.py  network-rag-system-integration-plan.md  network-rag-system-integration-summary.md  openhands_kb_updater_example.py  pyproject.toml  run_kb_update.py  test_integration.py  test_integration_standalone.py  test_openhands_mock.py
.github/workflows/: python-package.yml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  codebase_structure.md  development_progress.md  project_purpose.md  suggested_commands.md  task_completion_guidelines.md  tech_stack.md
config/: openhands_config.yaml
examples/: basic_usage.py  openhands_llm_integration_example.py
knowledge-base/: README.md
knowledge-base/automation/: validation-rules.yaml
knowledge-base/automation/templates/: router-template.txt
knowledge-base/devices/: Cisco_FTD_Config.md  Cisco_IOS_XE_Router_Config.md  Cisco_IOS_XE_Switch_Config.md  Cisco_IOS_XR_Config.md  Cisco_NX_OS_Config.md  Cisco_WLC_Config.md  R1_policy.md  R2_policy.md  SW1_policy.md
knowledge-base/devices/device_configs/: R1_running_config_2025-08-10.txt  README.md  SW1_running_config_2025-08-10.txt
requirements/: base.txt  dev.txt  test.txt
src/: __init__.py  config_generator.py  knowledge_base.py  llm_client.py  llm_integration.py  openhands_agent.py  openhands_integration.py  rag_system.py  utils.py
